force-app/main/default/objects/amazonconnect__AC_ContactChannels__c/amazonconnect__AC_ContactChannels__c.object-meta.xml
<CustomObject>
    <label>AC Contact Channel</label>
    <nameField>
        <displayFormat>Contact Channel {000000000}</displayFormat>
        <label>Contact Channel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AC Contact Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>