force-app/main/default/objects/amazonconnect__AC_ContactChannels__c/fields/amazonconnect__AgentName__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__AgentName__c</fullName>
    <label>Agent Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>