force-app/main/default/objects/amazonconnect__AC_ContactChannels__c/fields/amazonconnect__Case__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>AC Contact Channels</relationshipLabel>
    <relationshipName>AC_Contact_Channels</relationshipName>
    <type>Lookup</type>
</CustomField>