force-app/main/default/objects/amazonconnect__AC_ContactChannels__c/fields/amazonconnect__ContactId__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__ContactId__c</fullName>
    <externalId>true</externalId>
    <label>Contact Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>