force-app/main/default/objects/amazonconnect__AC_ContactChannels__c/fields/amazonconnect__CustomerCallbackNumber__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CustomerCallbackNumber__c</fullName>
    <label>Customer Callback Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>