force-app/main/default/objects/amazonconnect__AC_ContactChannels__c/fields/amazonconnect__DialedNumber__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__DialedNumber__c</fullName>
    <label>Dialed Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>