force-app/main/default/objects/amazonconnect__AC_ContactChannels__c/fields/amazonconnect__InteractionDuration__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__InteractionDuration__c</fullName>
    <label>Interaction Duration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>