force-app/main/default/objects/amazonconnect__AC_ContactChannels__c/fields/amazonconnect__QueueName__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__QueueName__c</fullName>
    <label>Queue Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>