force-app/main/default/objects/amazonconnect__AC_ContactChannels__c/fields/amazonconnect__RelatedToWhatId__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__RelatedToWhatId__c</fullName>
    <externalId>true</externalId>
    <label>RelatedToWhatId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>