force-app/main/default/objects/amazonconnect__AC_ContactChannels__c/fields/amazonconnect__RelatedToWhoId__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__RelatedToWhoId__c</fullName>
    <externalId>true</externalId>
    <label>RelatedToWhoId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>